# AbcGuiEditor

./: README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/abc_gui_editor/: about.py  desktop.py  program.py  program_old.py
