[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abc_gui_editor"
version = "0.1.0"
description = "A graphic user interface program to work with abc notation."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-desktop/AbcGuiEditor/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-desktop/AbcGuiEditor/tree/main/doc"
"Source" = "https://github.com/trucomanx-desktop/AbcGuiEditor"

[project.scripts]
"abc-gui-editor" = "abc_gui_editor.program:main"

[tool.setuptools]
packages = ["abc_gui_editor", "abc_gui_editor.modules"]

[tool.setuptools.package-data]
"abc_gui_editor" = ["icons/*.png", "icons/*.svg"]
